fixed some warnings, upgraded websockets support